# Maybe

./: CMakeLists.txt  README.md
cmake/: glfw.cmake
sandbox/: CMakeLists.txt  Makefile  cmake_install.cmake
sandbox/src/: main.c
src/: main.c  test.c
src/common/: common.h  error.h
src/common/list/: list.c  list.h
src/common/map/: map.c  map.h
src/common/vector/: vector.c  vector.h
src/ecs/: archetype.c  archetype.h  ecs.c  ecs.h  ecs_internal.h  entity.h  system.c  system.h
src/graphics/: graphics.c  graphics.h  graphics_internal.h  window.c  window.h
src/graphics/vulkan/: extension_functions.c  extension_functions.h  pipeline.c  pipeline.h  pipeline_internal.h  queue.c  queue.h  swap_chain.c  swap_chain.h  vulkan.c  vulkan.h  vulkan_internal.h
src/logger/: logger.c  logger.h  logger_internal.h
src/time/: time.c  time.h
src/utils/: io.c  io.h  io_internal.h  utils.c  utils.h
